--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
           <h1 class="display-1 fw-bold my-5">
-            Comidas del fin <br />
-            del mundo
+            vive sin arrepentimientos <br />
           </h1>
           <p class="my-5">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
