--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </section>
 
     <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+      <p class="mb-0">jeferson rivera 2024.todos los derechos reservados</p>
     </footer>
 
     <script
