--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
             vive sin arrepentimientos <br />
           </h1>
           <p class="my-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
-            accusamus iusto quibusdam dignissimos labore sequi. Cupiditate
-            reiciendis eius dolore, illum adipisci harum voluptas iste mollitia
-            inventore provident labore voluptatum nemo.
+            la disciplina,la constancia te permite llevar una vida plena.
           </p>
           <div class="mb-5 pb-5">
             <button class="btn btn-lg btn-outline-info text-light me-4">
