--- a/index.html
+++ b/index.html
@@ -81,11 +81,7 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
-      <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
-      </p>
+      <p class="my-4">la perseverancia te llevara al exito</p>
 
       <div class="row">
         <div class="col-12 col-md-4">
