--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               style="background-image: url(assets/img/card-1.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+              <h5 class="card-title fw-bold">Asado en santiago de chile</h5>
               <p class="card-text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Explicabo iure sint, perspiciatis distinctio molestias nihil
